--- a/style/styleStaff.css
+++ b/style/styleStaff.css
@@ -14,22 +14,6 @@
     display: inline-block;
   }
 
-<<<<<<< HEAD
-  .modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
-}
-
-=======
->>>>>>> 7316d89548000314a15045f7b5540aad58de1d1d
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto; 
